# agent-forge

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_forge/: __init__.py  cli.py  config.py
src/agent_forge/agents/: base.py  drafter.py  editor.py  hashtag_specialist.py  image_prompter.py  models.py  orchestrator.py  pipeline.py  researcher.py
src/agent_forge/evals/: golden_set.py  judge.py  models.py  runner.py
src/agent_forge/observability/: db.py  factory.py  sqlite_tracer.py  tracer.py
tests/: conftest.py  test_agent_base.py  test_cli_evals.py  test_cli_generate.py  test_cli_traces.py  test_eval_runner.py  test_judge.py  test_judgment_storage.py  test_new_specialists.py  test_pipeline.py  test_specialist_agents.py  test_sqlite_tracer.py  test_version.py
